[gd_scene load_steps=19 format=2]

[ext_resource path="res://Fonts/small_pixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu_background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/main_menu/BtnContinue.gd" type="Script" id=3]
[ext_resource path="res://Scripts/main_menu/BtnNewGame.gd" type="Script" id=4]
[ext_resource path="res://Scripts/main_menu/BtnQuit.gd" type="Script" id=5]
[ext_resource path="res://Scripts/main_menu/main_menu.gd" type="Script" id=6]
[ext_resource path="res://Sounds/04 - Ayla's Theme.mp3" type="AudioStream" id=7]
[ext_resource path="res://Sounds/toggle_001.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 0 ), Vector2( 0, -5 ), Vector2( 5, 0 ), Vector2( 0, 5 ), Vector2( -5, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 2.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="container"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 230.0

[node name="VBoxContainer" type="VBoxContainer" parent="container/HBoxContainer"]
margin_right = 130.0
margin_bottom = 220.0

[node name="logo" type="Label" parent="container/HBoxContainer/VBoxContainer"]
margin_right = 130.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "A Mamon Goes 
On  Head"
align = 1
valign = 1

[node name="anim" type="AnimationPlayer" parent="container/HBoxContainer/VBoxContainer/logo"]
anims/anim = SubResource( 2 )

[node name="menu" type="VBoxContainer" parent="container/HBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 130.0
margin_bottom = 191.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="continue" type="Button" parent="container/HBoxContainer/VBoxContainer/menu"]
margin_top = 32.0
margin_right = 130.0
margin_bottom = 48.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Continue"
align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" type="Button" parent="container/HBoxContainer/VBoxContainer/menu"]
margin_top = 68.0
margin_right = 130.0
margin_bottom = 84.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Novo Jogo"
align = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="container/HBoxContainer/VBoxContainer/menu"]
margin_top = 104.0
margin_right = 130.0
margin_bottom = 120.0
focus_mode = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "Sair"
align = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_pressed" type="AudioStreamPlayer" parent="container/HBoxContainer/VBoxContainer/menu"]
stream = ExtResource( 8 )

[node name="version" type="Label" parent="container/HBoxContainer/VBoxContainer"]
margin_top = 195.0
margin_right = 130.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Godot Engine 
v3.3.2"

[node name="CenterContainer" type="CenterContainer" parent="container/HBoxContainer"]
margin_left = 134.0
margin_right = 300.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="text" type="Label" parent="container/HBoxContainer/CenterContainer"]
margin_left = 20.0
margin_top = 92.0
margin_right = 146.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Gotta Catch 
'Em all"
align = 1

[node name="music_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -23.827

[connection signal="pressed" from="container/HBoxContainer/VBoxContainer/menu/new_game" to="container/HBoxContainer/VBoxContainer/menu/new_game" method="_on_new_game_pressed"]
[connection signal="pressed" from="container/HBoxContainer/VBoxContainer/menu/quit" to="container/HBoxContainer/VBoxContainer/menu/quit" method="_on_quit_pressed"]
